@@ -4,6 +4,9 @@ Revision history for Perl extension PGXN::API
       - Added the "special_files" key to the distribution metadata file. It
         includes paths to `README`, `META.json`, `Changes`, `Makefile`, and
         other special files in the distribution.
+      - Moved unzipped source directories under a subdirectory named for the
+        distribution. That is, rather than `/src/pair-0.1.1/`, we now have
+        `/src/pair/pair-0.1.1/`.
 
 0.3.2   2011-03-10T21:53:17
       - Updated to work with PGXN::Manager 0.10.0 output. In particular,
